--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -12,7 +12,7 @@ RUN apt update \
     && add-apt-repository -y ppa:neovim-ppa/stable \
     && add-apt-repository -y ppa:git-core/ppa \
     && apt install -y neovim git gdb strace ltrace ccache \
-    && apt install -y unzip iproute2 socat netcat ffmpeg graphviz jq \
+    && apt install -y unzip iproute2 socat netcat ffmpeg graphviz jq aria2 \
     && rm -rf /var/lib/apt/lists/*
 
 # common libs
