--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -14,7 +14,7 @@ RUN apt update \
 # dev tools
 RUN apt update \
     && apt upgrade -y \
-    && apt install -y gcc g++ clang clang++ cargo \
+    && apt install -y g++ clang cargo \
     make ninja-build ccache \
     gdb strace ltrace \
     iproute2 socat netcat \
