--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -48,10 +48,6 @@ ARG GO_VERSION=1.20.3
 RUN sh -c "wget -qO - https://golang.google.cn/dl/go${GO_VERSION}.linux-amd64.tar.gz | tar -C /opt -xz"
 ENV PATH="/opt/go/bin:${PATH}"
 
-# create user: ycgao
-RUN useradd -m -s /bin/bash ycgao \
-    && echo '%ycgao ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers
-
 # install miniconda3
 ARG PYTHON_VERSION=310
 ARG CONDA_VERSION=4.12.0
@@ -59,29 +55,26 @@ ARG CONDA_PREFIX=/opt/miniconda3
 RUN wget -qO Miniconda3.sh https://repo.anaconda.com/miniconda/Miniconda3-py${PYTHON_VERSION}_${CONDA_VERSION}-Linux-x86_64.sh \
     && chmod +x Miniconda3.sh \
     && ./Miniconda3.sh -b -p ${CONDA_PREFIX} \
-    && rm -rf * \
-    && chown ycgao:ycgao -R ${CONDA_PREFIX}
+    && rm -rf *
 ENV PATH="${CONDA_PREFIX}/bin:${PATH}"
 
-USER ycgao
-
 # common
-RUN pip install cffi pytest build pybind11 Cython \
-    && pip install jupyterlab \
-    && pip install numpy matplotlib seaborn pandas \
-    && pip install scipy scikit-learn \
-    && pip install opencv-python opencv-contrib-python \
-    && pip install Pillow PyYAML protobuf \
-    && pip install fire \
-    && pip cache purge
+RUN python3 -m pip install cffi pytest build pybind11 Cython \
+    jupyterlab \
+    numpy matplotlib seaborn pandas \
+    scipy scikit-learn \
+    opencv-python opencv-contrib-python \
+    Pillow PyYAML protobuf \
+    fire \
+    && python3 -m pip cache purge
 
 # onnx
-RUN pip install onnx onnxscript onnxconverter-common onnxruntime-gpu onnxruntime-tools onnxoptimizer skl2onnx \
-    && pip cache purge
+RUN python3 -m pip install onnx onnxscript onnxconverter-common onnxruntime-gpu onnxruntime-tools onnxoptimizer skl2onnx \
+    && python3 -m pip cache purge
 
 # pytorch
-RUN pip install --index-url https://download.pytorch.org/whl/cu124 torch torchvision \
-    && pip cache purge
+RUN python3 -m pip install --index-url https://download.pytorch.org/whl/cu124 torch torchvision \
+    && python3 -m pip cache purge
 
-RUN pip install sentencepiece tiktoken immutabledict \
-    && pip cache purge
+RUN python3 -m pip install sentencepiece tiktoken immutabledict \
+    && python3 -m pip cache purge
