--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -1,17 +1,23 @@
-ARG BASE_IMAGE=nvidia/cuda:12.5.1-cudnn-devel-ubuntu20.04
+ARG BASE_IMAGE=nvcr.io/nvidia/cuda:12.5.1-cudnn-devel-ubuntu22.04
 FROM ${BASE_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
 WORKDIR /workdir
 
-# tools
+RUN apt update \
+    && apt upgrade -y \
+    && apt install -y \
+    sudo gnupg2 ca-certificates \
+    curl wget \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN apt update \
     && apt install -y \
-    sudo lsb-release wget curl unzip ffmpeg graphviz jq aria2 \
-    iproute2 socat netcat \
-    git gdb strace ltrace ccache \
-    g++ clang make ninja-build \
-    llvm-dev cargo \
+    build-essential crossbuild-essential-amd64 ninja-build \
+    clang clangd clang-format clang-tools libclang-dev llvm-dev \
+    cargo \
+    gdb strace ltrace ccache \
+    iproute2 socat netcat jq aria2 ffmpeg graphviz \
     && rm -rf /var/lib/apt/lists/*
 
 # common libs
@@ -25,21 +31,21 @@ RUN apt update \
 
 # install cmake
 ARG CMAKE_VERSION=3.29.6
-RUN sh -c "wget -qO - https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-$(uname -m).tar.gz | tar -C /opt -xz"
+RUN wget -qO - "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.tar.gz" | tar -C /opt -xz
 ENV PATH="/opt/cmake-${CMAKE_VERSION}-linux-x86_64/bin:${PATH}"
 
 # install bazel
 ARG BAZEL_VERSION=7.3.1
-RUN wget -qO /usr/local/bin/bazel https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-linux-$(uname -m) \
+RUN wget -qO /usr/local/bin/bazel "https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-linux-x86_64" \
     && chmod +x /usr/local/bin/bazel
 
 # install nodejs
 ARG NODE_VERSION=v20.18.0
-RUN sh -c "wget -qO - https://nodejs.org/dist/${NODE_VERSION}/node-${NODE_VERSION}-linux-x64.tar.xz | tar -C /opt -xJ"
+RUN wget -qO - "https://nodejs.org/dist/${NODE_VERSION}/node-${NODE_VERSION}-linux-x64.tar.xz" | tar -C /opt -xJ
 ENV PATH="/opt/node-${NODE_VERSION}-linux-x64/bin:${PATH}"
 
 # install go
-ARG GO_VERSION=1.20.3
+ARG GO_VERSION=1.23.4
 RUN sh -c "wget -qO - https://golang.google.cn/dl/go${GO_VERSION}.linux-amd64.tar.gz | tar -C /opt -xz"
 ENV PATH="/opt/go/bin:${PATH}"
 
@@ -54,13 +60,12 @@ RUN wget -qO Miniconda3.sh https://repo.anaconda.com/miniconda/Miniconda3-py${PY
 ENV PATH="${CONDA_PREFIX}/bin:${PATH}"
 
 # common
-RUN python3 -m pip install cffi pytest build pybind11 Cython \
-    jupyterlab \
-    numpy matplotlib seaborn pandas \
-    scipy scikit-learn \
+RUN python3 -m pip install \
+    cffi pytest build pybind11 Cython \
+    ipython jupyterlab fire \
+    numpy matplotlib seaborn pandas scipy scikit-learn \
     opencv-python opencv-contrib-python \
     Pillow PyYAML protobuf \
-    fire \
     && python3 -m pip cache purge
 
 # onnx
@@ -68,7 +73,7 @@ RUN python3 -m pip install onnx onnxscript onnxconverter-common onnxruntime-gpu 
     && python3 -m pip cache purge
 
 # pytorch
-RUN python3 -m pip install --index-url https://download.pytorch.org/whl/cu124 torch torchvision \
+RUN python3 -m pip install --index-url https://download.pytorch.org/whl/cu121 torch torchvision \
     && python3 -m pip cache purge
 
 RUN python3 -m pip install sentencepiece tiktoken immutabledict \
