--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -69,7 +69,8 @@ RUN python3 -m pip install \
     && python3 -m pip cache purge
 
 # onnx
-RUN python3 -m pip install onnx onnxscript onnxconverter-common onnxruntime-gpu onnxruntime-tools onnxoptimizer onnxsim skl2onnx \
+RUN python3 -m pip install \
+    onnx onnxscript onnxconverter-common onnxruntime-gpu onnxruntime-tools onnxoptimizer onnxsim skl2onnx \
     && python3 -m pip cache purge
 
 # pytorch
